--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I Love Cats</title>
+    <title> Welcome to My Page!!!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,13 +47,11 @@
     </style>
 </head>
 <body>
-    <h1>I Love Cats!</h1>
+    <h1>Welcome to My Page!</h1>
     <div>
-        <h2>Why Cats are Awesome</h2>
-        <p>Cats are known for their independence, curiosity, and playful 
-nature. They make wonderful pets for people who enjoy companionship but also 
-value a little space.</p>
-        
+        <h2>Who Am I?</h2>
+        <p>My name is Gloria Liu. I'm a Junior student studying Information Science at UIUC. I'm also a transfer student, and I have a 4-year-old cat who celebrates his birthday today (9/24)!</p>
+
         <h2>Top Reasons to Love Cats</h2>
         <ul>
             <li>Cats are low maintenance compared to other pets.</li>
@@ -61,9 +59,8 @@ value a little space.</p>
             <li>They can be very affectionate when they trust you.</li>
         </ul>
 
-        <h3>Want to know more about cats?</h3>
-        <p>Check out this <a href="https://en.wikipedia.org/wiki/Cat" 
-target="_blank">Wikipedia page</a> for more cat facts!</p>
+        <h3>Want to know more about me?</h3>
+        <p>Check out my <a href="https://github.com/GloriaLiu930" target="_blank">GitHub profile</a> for more information!</p>
     </div>
 </body>
 </html>
